src/pages/app/gameuser/introduction/intro.module.css
.container {
  width: 100vw;
  height: 100vh;
  background-color: #2d2d2d;
  padding: 6.5rem 25rem;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}
.videoContainer {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}
.videoWrapper {
  position: relative;
}
.videoWrapper video {
  width: 100%;
  height: 100%;
  margin: 0; /* Reset margin */
  padding: 0; /* Reset padding */
  object-fit: fill;
}
.buttonContainer {
  width: 35rem;
  position: absolute;
  right: 0rem;
  bottom: 0rem;
  background-size: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  padding-right: 1rem;
}
.audioContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}
.previewAudioImage {
  max-width: 100%;
  max-height: 100%;
  width: auto;
  height: auto;
}
.pdfPreviewContainer {
  max-width: 100%;
  max-height: 100%;
  width: 100%;
  height: 100%;
}
.customizedPDFPreviewContainer {
  width: 100%;
  height: 100%;
  overflow: auto; /* Enable scrollbar */
}
.previewContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  /* max-width: 100%;
  max-height: 100%; */
  height: 100%;
  width: 100%;
  overflow: hidden; 
}
.previewImage {
  max-width: 100%;
  max-height: 100%;
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.overlay {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 400;
  /* background-color: rgba(1, 1, 1, 0.5); */
  backdrop-filter: blur(0.8rem);
  display: flex;
  justify-content: center;
  align-items: center;
}
.overlay svg {
  width: 12rem;
  height: 12rem;
  fill: var(--primary);
}

.overlay svg:hover {
  cursor: pointer;
}

@media only screen and (min-width: 768px) and (max-width: 1024px) {
  .videoContainer {
    width: auto;
    height: auto;
  }
  .previewImage {
    width: 100%;
  }
  .container {
    padding: 10rem 15rem;
  }
  /* .audioContainer {
    padding: 10rem 0;
  } */
}

